# Mono

./: .gitignore  CMakeLists.txt  README.md  REAEME.md  build-and-test.sh  install.sh
include/mono/: observable.hpp
tests/: main.cpp
